# LangGraph-Tutorial

./: .env.example  .gitignore  CONTRACT_DRAFTING_README.md  CONTRACT_GENERATION_PLAN.md  DEPLOYMENT.md  Dockerfile  FINAL_ARCHITECTURE.md  LANGSMITH_QUICKSTART.md  MIGRATION_COMPLETE.md  QUICKSTART.md  README.md  config.py  langgraph.json  main.py  pyproject.toml  simple.py  test_llm_client.py
data/output/: contract_20251124_150858.docx  contract_20251124_150858.txt  contract_20251124_150939.docx  contract_20251124_150939.txt  contract_20251124_155033.docx  contract_20251124_155033.txt  contract_20251124_160939.docx  contract_20251124_160939.txt
examples/: run_contract_drafting.py
knowledge_base/contract_types/: contract_types_rows.json
knowledge_base/reference_templates/fidic/: structure.py
knowledge_base/reference_templates/vob_b/: structure.py
resource/: Leistungsverzeichnis_Rohbauarbeiten_v3 (1).xlsx  Verhandlungsprotokoll_Subunternehmer_Rohbau.docx
resources/: create_sample_excel.py  leistungsverzeichnis.xlsx  verhandlungsprotokoll.txt
src/: contract_drafting_graph.py  contract_graph.py
src/core/: README.md  __init__.py  llm_clients.py
src/models/: __init__.py  contract.py  contract_drafting_state.py  state.py
src/nodes/: __init__.py  contract_generator.py  data_merger.py  data_validator.py  document_classifier.py  document_extractor.py  excel_extractor.py  output_formatter.py  pdf_extractor.py  quality_checker.py  upload_handler.py
src/prompts/: __init__.py  document_extraction.py
src/templates/: contract_template.jinja2
(+9 files in other folders)
